Mon Sep 30 17:28:39 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/object_tracing.c: [DOC] add some nots for 
	  ObjectSpace::trace_object_allocations.

Mon Sep 30 16:46:58 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/object_tracing.c: add new 3 methods to control tracing.
	  * ObjectSpace::trace_object_allocations_start
	  * ObjectSpace::trace_object_allocations_stop
	  * ObjectSpace::trace_object_allocations_clear
	  And some refactoring.

	* test/objspace/test_objspace.rb: add a test for new methods.

	* NEWS: add a description for new methods.

Mon Sep 30 11:18:04 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_gc_disable): do rest_sweep() before disable GC.
	  This fix may solve a failure of
	  TestTracepointObj#test_tracks_objspace_events
	  [test/-ext-/tracepoint/test_tracepoint.rb:43].

Mon Sep 30 10:40:20 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_method.c (rb_undef): raise a NameError if the original method
	  of a refined method is not defined.

	* vm_insnhelper.c (rb_method_entry_eq): added NULL check to avoid SEGV.

	* test/ruby/test_refinement.rb: related test.

Sun Sep 29 23:45:42 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_id_attrset, intern_str): allow junk attrset ID for
	  Struct.

	* parse.y (rb_id_attrset): fix inconsistency with literals, allow
	  ID_ATTRSET and return it itself, but ID_JUNK cannot make ID_ATTRSET.
	  and raise a NameError instead of rb_bug() for invalid argument.

Sun Sep 29 18:45:05 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_insnhelper.c (vm_callee_setup_arg_complex, vm_yield_setup_block_args):
	  clear keyword arguments to prevent GC bug which occurs
	  while marking VM stack.
	  [ruby-dev:47729] [Bug #8964]

	* test/ruby/test_keyword.rb: tests for the above.

Sat Sep 28 23:25:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* math.c (math_log, math_log2, math_log10): fix for Bignum argument.
	  numbits should be add only when right shifted.
